--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -804,407 +804,393 @@ svg {
 }
 
 /* 2. Footer */
-.footer-main {
-  background: #000 url('https://libraries.mit.edu/images/vi-shape7-tp.png') no-repeat 0 65%;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+.wrap-footer {
+  font-size: 12px;
+}
+.wrap-footer .wrap-policies, .wrap-footer.footer-slim .sitemap-libraries-abbrev a {
+  padding-left: 0;
+}
+.wrap-footer .wrap-policies li, .wrap-footer.footer-slim .sitemap-libraries-abbrev a li,
+.wrap-footer .wrap-policies .item,
+.wrap-footer.footer-slim .sitemap-libraries-abbrev a .item {
+  display: inline-block;
+  padding-right: 1rem;
+}
+.wrap-footer .wrap-policies li:after, .wrap-footer.footer-slim .sitemap-libraries-abbrev a li:after,
+.wrap-footer .wrap-policies .item:after,
+.wrap-footer.footer-slim .sitemap-libraries-abbrev a .item:after {
+  content: ' | ';
+  margin-left: 1rem;
+}
+.wrap-footer .wrap-policies li:last-child:after, .wrap-footer.footer-slim .sitemap-libraries-abbrev a li:last-child:after,
+.wrap-footer .wrap-policies .item:last-child:after,
+.wrap-footer.footer-slim .sitemap-libraries-abbrev a .item:last-child:after {
+  content: '';
+}
+.layout-band:after {
+  content: '';
+  display: table;
   clear: both;
-  width: 100%
+}
+.wrap-footer,
+.wrap-footer-institute {
+  max-width: 114rem;
+  margin: 0 auto;
+  padding: 10px 4%;
+}
+.wrap-footer:after,
+.wrap-footer-institute:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.wrap-outer-footer {
+  background-color: #000;
+  color: #fff;
+  font-size: 1.2em;
 }
 
-@media only screen and (min-width:569px) {
-  .footer-main {
-    padding: 2em 1.375em
-  }
+.wrap-footer {
+  padding: 3.5rem 4%;
 }
-
-@media only screen and (min-width:569px) {
-  .footer-main {
-    width: 100%
-  }
+.wrap-footer .wrap-sitemap .menu-sub {
+  display: none;
 }
-
-.footer-main a {
-  color: #fff
+.wrap-footer .identity {
+  margin-top: 4rem;
+  margin-bottom: 2rem;
 }
-
-.footer-main .identity {
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  padding: 2em 0 0
+.wrap-footer .wrap-logo-lib {
+  display: inline-block;
+  vertical-align: bottom;
+  margin: 0 20px 20px 0;
 }
-
-@media only screen and (min-width:569px) {
-  .footer-main .identity {
-    -webkit-box-align: end;
-    -webkit-align-items: flex-end;
-    -ms-flex-align: end;
-    align-items: flex-end;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    width: 100%
-  }
+.wrap-footer .wrap-social {
+  display: inline-block;
+  vertical-align: bottom;
+  margin-bottom: 20px;
 }
-
-.footer-main .links-all {
-  display: none
+.wrap-footer .wrap-policies {
+  width: 100%;
+  border-top: 1px solid #595959;
+  padding-top: 2rem;
 }
-
-@media only screen and (min-width:569px) {
-  .footer-main .links-all {
+.wrap-footer .wrap-policies span {
+  display: inline-block;
+  margin: 1rem 1.5rem 1rem 0;
+}
+.wrap-footer .wrap-policies span.item {
+  margin-right: 0;
+}
+.wrap-footer .wrap-policies span:after {
+  content: '';
+}
+.wrap-footer .wrap-social .text-find-us {
+  display: none;
+}
+@media (min-width: 768px) {
+  .wrap-footer .wrap-sitemap {
     display: -webkit-box;
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    width: 100%
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
-}
-
-.footer-main .links-all h4 {
-  font-size: 1.125em;
-  font-weight: 400;
-  padding-bottom: 1em
-}
-
-.footer-main .links-all .flex-item {
-  margin-right: 1.75em
-}
-
-.footer-main .links-all .link-sub {
-  display: block;
-  font-size: .75em
-}
-
-@media only screen and (min-width:569px) {
-  .footer-main .links-all .link-sub {
-    font-size: .75em;
-    font-weight: 300
+  .wrap-footer .wrap-sitemap .col {
+    margin-right: 3%;
   }
-  .footer-main .links-all .link-sub:not(:last-of-type) {
-    padding-bottom: 1em
+  .wrap-footer .wrap-sitemap .col:last-child {
+    margin-right: 0;
   }
-}
-
-.footer-main .links-primary {
-  border-top: 1px solid #808285;
-  border-bottom: 1px solid #808285;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  font-size: .8125em;
-  margin-top: 2em;
-  padding: 2rem 1.375rem;
-  width: 100%
-}
-
-@media only screen and (min-width:569px) {
-  .footer-main .links-primary {
+  .wrap-footer .wrap-sitemap .menu-sub {
+    display: block;
+  }
+  .wrap-footer .identity {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin: 4% 0 0 0;
+  }
+  .wrap-footer .wrap-logo-lib,
+  .wrap-footer .wrap-policies,
+  .wrap-footer .wrap-social {
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .wrap-footer .wrap-logo-lib {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-right: 4%;
+  }
+  .wrap-footer .wrap-policies {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    padding: auto;
     border-top: none;
-    border-bottom: none;
-    font-size: .875em;
-    margin-top: -22.4px;
-    margin-top: -1.4rem;
-    margin-left: 184px;
-    margin-left: 11.5rem;
-    padding: 0;
-    z-index: 3000
+    width: auto;
+  }
+  .wrap-footer .wrap-policies span {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .wrap-footer .wrap-social {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+    margin-left: auto;
+  }
+}
+@media (min-width: 1024px) {
+  .wrap-footer .wrap-social {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+  .wrap-footer .wrap-policies {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
 }
 
-@media only screen and (max-width:1023px) {
-  .footer-main .links-primary {
-    margin-top: 24px;
-    margin-top: 1.5rem;
-    margin-left: 0;
-    margin-left: 0
-  }
+.wrap-footer.footer-slim {
+  padding: 1.5rem 4%;
 }
-
-.footer-main .links-primary span {
+.wrap-footer.footer-slim .wrap-middle {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.wrap-footer.footer-slim .wrap-middle .wrap-policies {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+.wrap-footer.footer-slim .wrap-middle .wrap-sitemap {
+  display: inline-block;
+  margin-bottom: 2rem;
+}
+.wrap-footer.footer-slim .wrap-middle .wrap-sitemap .item {
   display: block;
-  width: 50%
+  margin-right: 10px;
+  margin-bottom: 5px;
 }
-
-.footer-main .links-primary span:not(:last-of-type) {
-  margin-bottom: 1.5em
-}
-
-@media only screen and (min-width:569px) {
-  .footer-main .links-primary span {
-    font-weight: 300;
-    padding-left: 1em;
-    width: auto
+@media (min-width: 768px) {
+  .wrap-footer.footer-slim .wrap-middle {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
-  .footer-main .links-primary span:not(:last-of-type):after {
-    color: #dedede;
-    content: '|';
+  .wrap-footer.footer-slim .wrap-middle .wrap-policies {
+    margin-left: 2%;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .wrap-footer.footer-slim .wrap-middle .wrap-sitemap {
     display: inline-block;
-    margin-left: 1em
+    margin-left: 2%;
+    margin-bottom: auto;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .wrap-footer.footer-slim .wrap-middle .wrap-sitemap .item {
+    display: inline-block;
+    margin-bottom: auto;
+  }
+  .wrap-footer.footer-slim .wrap-social {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
   }
 }
 
-@media only screen and (max-width:1023px) {
-  .footer-main .links-primary span:first-of-type {
-    padding-left: 0
-  }
+.wrap-footer-institute {
+  padding: 20px 4%;
 }
 
-.footer-main .logo-mit-lib {
-  display: block;
-  fill: #fff;
-  padding-left: 1.375em;
-  width: 10.3125em
+.wrap-content li {
+  margin-bottom: .5em;
+}
+.wrap-content .title-page {
+  margin-bottom: 1rem;
+  padding: .5rem 0 1rem 0;
+  font-weight: 600;
 }
 
-@media only screen and (min-width:569px) {
-  .footer-main .logo-mit-lib {
-    padding-left: 0;
-    max-width: 9.5em;
-    width: 9.5em
-  }
+.wrap-footer {
+  background: #000 url("https://libraries.mit.edu/images/vi-shape7-tp.png") no-repeat 10%;
 }
-
-.footer-main .logo-mit-lib svg {
-  max-height: 4em;
-  max-width: 9.5em
-}
-
-.footer-main .text-find-us {
+.wrap-footer a {
   color: #fff;
-  display: none;
-  font-size: .625em;
-  font-weight: 700;
+  text-decoration: none;
+}
+.wrap-footer a:hover, .wrap-footer a:active, .wrap-footer a:focus {
+  text-decoration: underline;
+  color: #fff;
+}
+.wrap-footer .title {
+  margin-bottom: .8rem;
+}
+.wrap-footer .wrap-list .link-sub {
+  display: list-item;
+  list-style-type: none;
+  margin-bottom: .65rem;
+  font-weight: 300;
+}
+.wrap-footer .logo-mit-lib {
+  fill: #fff;
+}
+.wrap-footer .logo-mit-lib svg {
+  max-height: 60px;
+  max-width: 100%;
+  vertical-align: baseline;
+}
+.wrap-footer .wrap-policies {
+  font-size: 1.4em;
+}
+.wrap-footer .wrap-social p, .wrap-footer .wrap-social a {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: .5rem;
+  margin-bottom: 0;
   text-transform: uppercase;
-  min-width: 7em
+  font-size: 1.2em;
+}
+.wrap-footer .wrap-social svg {
+  height: 2em;
+  width: 2em;
+  border-radius: 50%;
+  padding: 0.2em;
+  background: #fff none repeat scroll 0 0;
+}
+.wrap-footer .wrap-social svg path {
+  fill: #333;
 }
 
-@media only screen and (min-width:569px) {
-  .footer-main .text-find-us {
-    display: block
-  }
+.wrap-footer.footer-slim .sitemap-libraries-abbrev a {
+  font-size: 1.4em;
 }
 
-.footer-main .social {
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  padding-left: 1.375em;
+.wrap-outer-footer-institute {
+  background-color: #333;
+  font-size: 12px;
+  color: #dedede;
+}
+.wrap-outer-footer-institute .footer-info-institute {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+.wrap-outer-footer-institute a {
+  color: #fff;
+}
+.wrap-outer-footer-institute a:hover, .wrap-outer-footer-institute a:active, .wrap-outer-footer-institute a:focus {
+  color: #fff;
+}
+.wrap-outer-footer-institute .link-logo-mit .logo-mit {
+  fill: #ccc;
+}
+.wrap-outer-footer-institute .link-logo-mit .logo-mit .color {
+  fill: #fff;
+}
+.wrap-outer-footer-institute .about-mit {
+  color: #dedede;
+  margin-right: 4%;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+.wrap-outer-footer-institute .license {
+  margin-left: auto;
+  margin-top: 1rem;
+  color: #dedede;
+}
+
+/* 3. no-flexbox fallbacks */
+.no-flexbox.no-flexboxlegacy .flex-clear {
+  clear: both
+}
+
+.no-flexbox.no-flexboxlegacy .flex-container {
+  display: block
+}
+
+.no-flexbox.no-flexboxlegacy .flex-container>a,
+.no-flexbox.no-flexboxlegacy .flex-container>button,
+.no-flexbox.no-flexboxlegacy .flex-container>div,
+.no-flexbox.no-flexboxlegacy .flex-container>form,
+.no-flexbox.no-flexboxlegacy .flex-container>h1,
+.no-flexbox.no-flexboxlegacy .flex-container>h2,
+.no-flexbox.no-flexboxlegacy .flex-container>h3,
+.no-flexbox.no-flexboxlegacy .flex-container>header,
+.no-flexbox.no-flexboxlegacy .flex-container>input,
+.no-flexbox.no-flexboxlegacy .flex-container>nav,
+.no-flexbox.no-flexboxlegacy .flex-container>span,
+.no-flexbox.no-flexboxlegacy .flex-container>svg,
+.no-flexbox.no-flexboxlegacy .flex-container>ul {
+  float: left;
   width: auto
 }
 
-@media only screen and (min-width:569px) {
-  .footer-main .social {
-    -webkit-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    margin-bottom: -.8em;
-    z-index: 4000
-  }
-}
-
-.footer-main .social a {
-  width: 33%
-}
-
-.footer-main .social a:hover {
-  text-decoration: none
-}
-
-@media only screen and (min-width:569px) {
-  .footer-main .social a {
-    width: 20%
-  }
-  .footer-main .social a:not(:last-of-type) {
-    margin-right: .5em
-  }
-}
-
-.footer-main .social [class*=icon-social] {
-  background: #fff;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  height: 1.5em;
-  padding: .2em;
-  width: 1.5em
-}
-
-.footer-main .social [class*=icon-social] path {
-  fill: #000
-}
-
-@media only screen and (min-width:569px) {
-  .footer-main .social [class*=icon-social] {
-    height: 2em;
-    padding: .2em;
-    width: 2em
-  }
-}
-
-.footer-info-institute {
-  -webkit-box-align: baseline;
-  -webkit-align-items: baseline;
-  -ms-flex-align: baseline;
-  align-items: baseline;
-  background: #333;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  padding: 1.5em 1em
-}
-
-@media only screen and (min-width:569px) {
-  .footer-info-institute {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row
-  }
-}
-
-.footer-info-institute .about-mit {
-  font-size: .625em;
-  margin-bottom: 2em
-}
-
-.footer-info-institute .about-mit span {
-  color: #eee;
-  text-transform: uppercase
-}
-
-.footer-info-institute .about-mit span:first-of-type {
-  font-weight: 700
-}
-
-@media only screen and (min-width:569px) {
-  .footer-info-institute .about-mit span {
-    color: #ededed
-  }
-  .footer-info-institute .about-mit span:not(:last-of-type):after {
-    content: '|';
-    font-weight: 400
-  }
-}
-
-.footer-info-institute .license {
-  color: #ededed;
-  font-size: .6875em;
-  width: 100%
-}
-
-.footer-info-institute .license a {
-  color: #ededed
-}
-
-.footer-info-institute .link-mit-home {
-  display: block
-}
-
-@media only screen and (min-width:569px) {
-  .footer-info-institute .link-mit-home {
-    margin: 0 1em 1.5em 0
-  }
-}
-
-.footer-info-institute .logo-mit {
-  fill: #bbb9b8;
-  width: 3.375em
-}
-
-.footer-info-institute .logo-mit .color {
-  fill: #ededed
-}
-
-.no-flexbox .footer-info-institute {
-  display: block
-}
-
-.no-flexbox .footer-info-institute:after {
+.no-flexbox.no-flexboxlegacy .flex-container:after {
   clear: both;
   content: '';
   display: table
 }
 
-.no-flexbox .footer-info-institute>a,
-.no-flexbox .footer-info-institute>div {
+.no-flexbox.no-flexboxlegacy .flex-item {
   float: left
 }
 
-.no-flexbox .footer-info-institute .about-mit {
-  padding-top: 4em
+/* 4. hiding and showing elements based on mobile classes */
+.hidden-mobile {
+  display: none;
 }
 
-.no-flexbox .footer-info-institute .link-mit-home {
-  padding-top: 1.5em
-}
-
-.no-flexbox .footer-main.flex-container {
+.hidden-non-mobile {
   display: block;
-  float: left
 }
 
-.no-flexbox .footer-main:after {
-  clear: both;
-  content: '';
-  display: table
+@media only screen and (min-width: 569px) {
+  .hidden-non-mobile {
+    display: none;
+  }
 }
 
-.no-flexbox .footer-main .identity {
-  position: relative;
-  width: 100%
-}
-
-.no-flexbox .footer-main .identity .logo-mit-lib {
-  display: block;
-  float: left
-}
-
-.no-flexbox .footer-main .identity .social {
-  bottom: 0;
-  display: block;
-  right: 22px;
-  position: absolute
-}
-
-.no-flexbox .footer-main .links-primary {
-  display: block;
-  margin-top: 0;
-  margin-left: 0;
-  left: 202px;
-  position: absolute;
-  top: 79px;
-  width: 100%
-}
-
-.no-flexbox .footer-main .links-primary span {
-  display: block;
-  float: left;
-  position: relative
-}
-
-.no-flexbox.flexboxlegacy .footer-main {
-  overflow-x: hidden
-}
-
-.lte-ie9.no-flexbox .footer-main .identity {
-  width: 100%
+@media only screen and (min-width: 569px) {
+  .hidden-mobile {
+    display: block;
+  }
 }
 
 /* 3. no-flexbox fallbacks */
@@ -1280,7 +1266,7 @@ svg {
 }
 
 .header-main, 
-.footer-main-wrap {
+.layout-band {
   max-width: 1170px; /* matches .container */
   width: 100%;
   margin: 0 auto;
