--- a/libanswers/custom-head.html
+++ b/libanswers/custom-head.html
@@ -136,6 +136,11 @@ a:hover i {
   width: 100%
 }
 
+.header-main svg {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 @media only screen and (min-width:569px) {
   .header-main {
     width: 100%
