--- a/libcal/custom-head.html
+++ b/libcal/custom-head.html
@@ -135,6 +135,11 @@ h3 {
   width: 100%
 }
 
+.header-main svg {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 @media only screen and (min-width:569px) {
   .header-main {
     width: 100%
