--- a/libwizard/custom-header.html
+++ b/libwizard/custom-header.html
@@ -4,191 +4,20 @@
       <span class="sr">MIT Libraries</span>
     </a><!-- End MIT Libraries Logo -->
   </h1><!-- End div.name-site -->
-  <div class="menu--toggle"><!-- Mobile Hamburger icon -->
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="18.909px" height="13.091px" viewBox="2.182 6.545 18.909 13.091" enable-background="new 2.182 6.545 18.909 13.091" xml:space="preserve"><path d="M2.909,6.545h17.454c0.197,0,0.367,0.072,0.512,0.216c0.145,0.144,0.216,0.314,0.216,0.511s-0.071,0.367-0.216,0.511
-    c-0.145,0.144-0.314,0.216-0.512,0.216H2.909c-0.197,0-0.367-0.072-0.511-0.216C2.254,7.639,2.182,7.469,2.182,7.272
-    s0.072-0.367,0.216-0.511C2.542,6.617,2.712,6.545,2.909,6.545z M20.363,13.818H2.909c-0.197,0-0.367-0.072-0.511-0.216
-    s-0.216-0.314-0.216-0.511c0-0.196,0.072-0.367,0.216-0.511s0.314-0.216,0.511-0.216h17.454c0.197,0,0.367,0.072,0.512,0.216
-    s0.216,0.314,0.216,0.511c0,0.197-0.071,0.367-0.216,0.511S20.561,13.818,20.363,13.818z M20.363,19.636H2.909
-    c-0.197,0-0.367-0.071-0.511-0.216s-0.216-0.314-0.216-0.511s0.072-0.367,0.216-0.511c0.144-0.145,0.314-0.217,0.511-0.217h17.454
-    c0.197,0,0.367,0.072,0.512,0.217c0.145,0.144,0.216,0.314,0.216,0.511s-0.071,0.366-0.216,0.511S20.561,19.636,20.363,19.636z"/>
-    </svg>
-  </div><!-- end hamburger icon -->
-  <nav id="nav-main" class="nav-main" aria-label="Primary">
-  <ul class="nav-main-list flex-container">
-    <li class="link-primary flex-end">
-      <h2 class="main-nav-header">
-        <a id="main-nav-searchmenu-title" href="https://libraries.mit.edu/search" class="no-underline search-link main-nav-link">Search</a>
-        <button class="menu-control sr">Search menu</button>
-      </h2>
-      <div aria-labelledby="main-nav-searchmenu-title" id="main-nav-searchmenu" class="links-sub flex-container group">
-        <div class="col-1 flex-item">
-          <h3 class="heading-col">Start here</h3>
-          <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/quicksearch">Quick search <span class="about">Books, articles, and more at MIT</span></a></li>
-            <li><a href="https://libraries.mit.edu/vera">Vera <span class="about">E-journals &amp; databases</span></a></li>
-            <li><a href="https://libraries.mit.edu/barton">Barton catalog <span class="about">Classic catalog search</span></a></li>
-            <li><a href="https://libraries.mit.edu/worldcat">WorldCat<span class="about">Books &amp; more worldwide</span></a></li>
-            <li><a href="https://libraries.mit.edu/barton-reserves">Course reserves</a></li>
-            <li><a href="https://libraries.mit.edu/search" class="bottom extra"><span>More search tools &amp; help</span> <span class="about">Images, data, DSpace, etc.</span></a></li>
-          </ul>
-        </div>
-        <div class="col-2 flex-item">
-          <h3 class="heading-col">Also try</h3>
-          <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/fulltext">FullText Finder <span class="about">Find specific citations</span></a></li>
-            <li><a href="https://libraries.mit.edu/google-scholar-tips">Google Scholar for MIT <span class="about">Change settings to get better access</span></a></li>
-            <li><a href="https://libraries.mit.edu/dspace">DSpace@MIT <span class="about">MIT research</span></a></li>
-            <li><a href="https://libraries.mit.edu/dome">Dome <span class="about">MIT-digitized images, maps, etc.</span></a></li>
-            <li><a href="https://libraries.mit.edu/site-search">Site search</a></li>
-          </ul>
-        </div>
-      </div><!-- end div.links-sub -->
-    </li><!-- end div.links-primary -->
-    <li class="link-primary flex-end">
-      <h2 class="main-nav-header">
-        <a id="main-nav-hoursmenu-title" href="https://libraries.mit.edu/hours" class="no-underline main-nav-link">Hours &amp; locations</a>
-        <button class="menu-control sr">Hours &amp; locations menu</button>
-      </h2>
-      <div aria-labelledby="main-nav-hoursmenu-title" id="main-nav-hoursmenu" class="links-sub flex-container group">
-        <div class="col-1 flex-item">
-          <h3 class="heading-col">Locations</h3>
-          <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/barker">Barker Library</a></li>
-            <li><a href="https://libraries.mit.edu/dewey">Dewey Library</a></li>
-            <li><a href="https://libraries.mit.edu/hayden">Hayden Library</a></li>
-            <li><a href="https://libraries.mit.edu/rotch">Rotch Library</a></li>
-            <li><a href="https://libraries.mit.edu/distinctive-collections">Distinctive Collections</a></li>
-            <li><a href="https://libraries.mit.edu/music">Lewis Music Library</a></li>
-            <li><a href="https://libraries.mit.edu/lsa">Library Storage Annex</a></li>
-            <li><a href="https://libraries.mit.edu/hours" class="bottom">All hours &amp; locations</a></li>
-          </ul>
-        </div>
-        <div class="col-2 flex-item">
-          <h3 class="heading-col">Using the Libraries</h3>
-          <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/locations">Map of locations</a></li>
-            <li><a href="https://libraries.mit.edu/study">Study spaces</a></li>
-            <li><a href="https://libraries.mit.edu/disabilities">Persons with disabilities</a></li>
-            <li><a href="https://libraries.mit.edu/copying">Scan, copy, print</a></li>
-            <li><a href="https://libraries.mit.edu/exhibits">Exhibits &amp; galleries</a></li>
-            <li><a href="https://libraries.mit.edu/visitors">Non-MIT visitors</a></li>
-            <li><a href="https://libraries.mit.edu/use-policies">Library use policy</a></li>
-          </ul>
-        </div>
-      </div><!-- end div.links-sub -->
-    </li><!-- end div.links-primary -->
-    <li class="link-primary flex-end">
-      <h2 class="main-nav-header">
-        <a id="main-nav-borrowmenu-title" href="https://libraries.mit.edu/borrow" class="no-underline main-nav-link">Borrow &amp; request</a>
-        <button class="menu-control sr">Borrow &amp; request menu</button>
-      </h2>
-      <div aria-labelledby="main-nav-borrowmenu-title" id="main-nav-borrowmenu" class="links-sub flex-container group">
-        <div class="col-1 flex-item">
-          <h3 class="heading-col">Renew, request, suggest</h3>
-          <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/barton-account">Your Account <span class="about">Renew MIT items</span></a></li>
-            <li><a href="https://libraries.mit.edu/barton">Barton catalog <span class="about">Request items owned by MIT</span></a></li>
-            <li><a href="https://libraries.mit.edu/worldcat">WorldCat <span class="about">Request items not owned by MIT</span></a></li>
-            <li><a href="https://libraries.mit.edu/illiad">ILLiad <span class="about">Track your Interlibrary Borrowing requests</span></a></li>
-            <li><a href="https://libraries.mit.edu/suggest-purchase">Suggest a purchase</a></li>
-            <li><a href="https://libraries.mit.edu/borrow" class="bottom">More options &amp; help</a></li>
-          </ul>
-        </div>
-        <div class="col-2 flex-item">
-          <h3 class="heading-col">More information</h3>
-          <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/circ">Circulation FAQ <span class="about">Info about fines, renewing, etc.</span></a></li>
-            <li><a href="https://libraries.mit.edu/reserves">Course reserves &amp; TIP FAQ</a></li>
-            <li><a href="https://libraries.mit.edu/otherlibraries">Visit non-MIT libraries <span class="about">Harvard, Borrow Direct, etc.</span></a></li>
-          </ul>
-        </div>
-      </div>
-    </li>
-    <li class="link-primary flex-end">
-      <h2 class="main-nav-header">
-        <a id="main-nav-researchmenu-title" href="https://libraries.mit.edu/research-support" class="no-underline main-nav-link">Research support</a>
-        <button class="menu-control sr">Research support menu</button>
-      </h2>
-      <div aria-labelledby="main-nav-researchmenu-title" id="main-nav-researchmenu" class="links-sub flex-container push group">
-        <div class="col-1 flex-item">
-          <h3 class="heading-col">Help &amp; useful tools</h3>
-          <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/ask">Ask us <span class="about">Email, chat, call, drop by</span></a></li>
-            <li><a href="https://libraries.mit.edu/experts">Research guides &amp; expert librarians <span class="about">For every research interest</span></a></li>
-            <li><a href="https://libraries.mit.edu/offcampus">Connect from on and off-campus <span class="about">Tips &amp; tricks</span></a></li>
-            <li><a href="https://libraries.mit.edu/productivity-tools">Productivity tools <span class="about">Apps, RSS, etc.</span></a></li>
-            <li><a href="https://libraries.mit.edu/new-books">New books by subject <span class="about">Browse or subscribe to RSS feeds</span></a></li>
-            <li><a href="https://libraries.mit.edu/research-support" class="bottom">More research support</a></li>
-          </ul>
-        </div>
-        <div class="col-2 flex-item">
-          <h3 class="heading-col">Publishing &amp; content management</h3>
-          <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/references">Citation &amp; writing tools <span class="about">Mendeley, Zotero, &amp; Overleaf</span></a></li>
-            <li><a href="https://libraries.mit.edu/citing">Citing sources <span class="about">Avoid plagiarism, format references, etc.</span></a></li>
-            <li><a href="https://libraries.mit.edu/manage-info">Manage your info &amp; data <span class="about">Organize your data, files, and more</span></a></li>
-            <li><a href="https://libraries.mit.edu/publishing">Getting published <span class="about">Tools &amp; help</span></a></li>
-            <li><a href="https://libraries.mit.edu/scholarly">Scholarly publishing <span class="about">Open access &amp; copyright</span></a></li>
-          </ul>
-        </div>
-      </div><!-- end div.links-sub -->
-    </li><!-- end div.links-primary -->
-    <li class="link-primary flex-end">
-      <h2 class="main-nav-header">
-        <a id="main-nav-aboutmenu-title" href="https://libraries.mit.edu/about" class="no-underline main-nav-link">About</a>
-        <button class="menu-control sr">About menu</button>
-      </h2>
-      <div aria-labelledby="main-nav-aboutmenu-title" id="main-nav-aboutmenu" class="links-sub flex-container push group">
-        <div class="col-1 flex-item">
-          <h3 class="heading-col">About the Libraries</h3>
-          <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/about/">About us</a></li>
-            <li><a href="https://libraries.mit.edu/contact">Contact us</a></li>
-            <li><a href="https://libraries.mit.edu/jobs">Jobs</a></li>
-            <li><a href="https://libraries.mit.edu/giving">Giving to the MIT Libraries</a></li>
-          </ul>
-        </div>
-        <div class="col-2 flex-item">
-          <h3 class="heading-col">News, events, &amp; exhibits</h3>
-          <a href="https://libraries.mit.edu/events">Classes &amp; events</a>
-          <a href="https://libraries.mit.edu/news">News</a>
-          <a href="https://libraries.mit.edu/exhibits">Exhibits &amp; galleries</a>
-          <a href="https://libraries.mit.edu/news/in-the-media">In the media</a>
-          <a href="https://libraries.mit.edu/mit-reads/">MIT Reads</a>
-        </div>
-      </div><!-- end div.links-sub -->
-    </li><!-- end div.links-primary -->
-    <li class="link-primary flex-end small chat push">
-      <h2 class="main-nav-header">
-        <a id="main-nav-askusmenu-title" href="https://libraries.mit.edu/ask" class="no-underline main-nav-link"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="16.593px" height="16px" viewBox="0 0 16.593 16" enable-background="new 0 0 16.593 16" xml:space="preserve"><path d="M16.593 6.278c0 1.074-0.074 2.148-0.241 3.185 -0.204 1.353-1.722 2.574-3.055 2.722 -1.353 0.131-2.686 0.204-4.02 0.223L5.74 15.833C5.63 15.944 5.481 16 5.334 16c-0.094 0-0.167-0.019-0.241-0.037C4.871 15.87 4.74 15.647 4.74 15.407V12.37c-0.481-0.036-0.963-0.055-1.443-0.111 -1.334-0.148-2.853-1.443-3.074-2.796C0.074 8.426 0 7.352 0 6.296c0-1.092 0.074-2.185 0.223-3.24 0.222-1.352 1.74-2.648 3.074-2.797C4.963 0.093 6.63 0 8.297 0s3.333 0.093 5 0.259c1.333 0.149 2.851 1.445 3.055 2.797C16.519 4.111 16.593 5.204 16.593 6.278"/></svg><span>Ask Us</span></a>
-        <button class="menu-control sr">Ask us menu</button>
-      </h2>
-      <div aria-labelledby="main-nav-askusmenu-title" id="main-nav-askusmenu" class="links-sub push">
-        <div class="wrap-button-chat">
-        <div id='libchat_be2c654b63dd43f31c56295ee5d78d88'></div>
-        </div>
-        <a class="more" href="https://libraries.mit.edu/ask">More ways to ask us</a>
-      </div>
-    </li>
-    <li class="link-primary flex-end small">
-      <h2 class="main-nav-header">
-        <a href="https://libraries.mit.edu/barton-account" class="no-underline main-nav-link account-link">
-          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="15.4" height="16" viewBox="0 0 15.4 16" enable-background="new 0 0 15.445 16" xml:space="preserve"><path d="M13.4 15.7C12.2 15.9 10.4 16 7.7 16c-5.4 0-7.3-0.6-7.3-0.6 -0.3-0.1-0.4-0.4-0.4-0.7 0.3-1.6 1.2-2.5 2.5-3.3 0.3-0.2 0.8-0.4 1.2-0.6 0.8-0.3 1.8-0.7 2-1.3C5.8 9.2 5.7 8.6 5.2 7.9c-1.4-2.3-1.7-4.3-0.8-5.9C5.1 0.7 6.4 0 7.7 0c1.4 0 2.6 0.7 3.3 2 0.9 1.6 0.7 3.6-0.8 5.9C9.8 8.6 9.6 9.2 9.8 9.6c0.2 0.6 1.2 1 2 1.3 0.4 0.2 0.9 0.4 1.2 0.6 1.2 0.8 2.1 1.6 2.5 3.3 0.1 0.3-0.1 0.6-0.4 0.7C15 15.4 14.5 15.6 13.4 15.7"/></svg><span>Account</span>
-        </a>
-      </h2>
-    </li>
-  </ul>
+  <nav id="nav-main" class="nav-main flex-container" aria-label="Primary">
+    <ul class="nav-main-list flex-end">
+      <li class="link-primary flex-end">
+        <h2 class="main-nav-header">
+          <a id="main-nav-privacy-title" href="https://libraries.mit.edu/privacy" class="no-underline main-nav-link">Privacy</a>
+        </h2>
+      </li>
+      <li class="flex-end"><h2 class="main-nav-divider"> | </h2></li>
+      <li class="link-primary flex-end">
+        <h2 class="main-nav-header">
+          <a id="main-nav-accessibility-title" href="https://libraries.mit.edu/accessibility" class="no-underline main-nav-link">Accessibility</a>
+        </h2>
+      </li>
+    </ul>
+    <a class="link-logo-mit flex-end" href="http://www.mit.edu"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="54" height="28" viewBox="0 0 54 28" enable-background="new 0 0 54 28" xml:space="preserve" class="logo-mit"><rect x="28.9" y="8.9" width="5.8" height="19.1" class="color"/><rect width="5.8" height="28"/><rect x="9.6" width="5.8" height="18.8"/><rect x="19.3" width="5.8" height="28"/><rect x="38.5" y="8.9" width="5.8" height="19.1"/><rect x="38.8" width="15.2" height="5.6"/><rect x="28.9" width="5.8" height="5.6"/></svg></a>
   </nav>
-  <a class="link-logo-mit" href="http://www.mit.edu"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="54" height="28" viewBox="0 0 54 28" enable-background="new 0 0 54 28" xml:space="preserve" class="logo-mit"><rect x="28.9" y="8.9" width="5.8" height="19.1" class="color"/><rect width="5.8" height="28"/><rect x="9.6" width="5.8" height="18.8"/><rect x="19.3" width="5.8" height="28"/><rect x="38.5" y="8.9" width="5.8" height="19.1"/><rect x="38.8" width="15.2" height="5.6"/><rect x="28.9" width="5.8" height="5.6"/></svg></a>
-  <a href="https://libraries.mit.edu/search" class="link-site-search hidden-non-mobile">
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12" height="16" viewBox="0 0 12 12" alt="search" class="icon-search"><path d="M7.273 0.727q1.187 0 2.19 0.585t1.588 1.588 0.585 2.19-0.585 2.19-1.588 1.588-2.19 0.585q-1.278 0-2.33-0.676l-3.284 3.301q-0.295 0.284-0.688 0.284-0.403 0-0.688-0.284t-0.284-0.688 0.284-0.688l3.301-3.284q-0.676-1.051-0.676-2.33 0-1.188 0.585-2.19t1.588-1.588 2.19-0.585zM7.273 8q0.591 0 1.128-0.23t0.929-0.622 0.622-0.929 0.23-1.128-0.23-1.128-0.622-0.929-0.929-0.622-1.128-0.23-1.128 0.23-0.929 0.622-0.622 0.929-0.23 1.128 0.23 1.128 0.622 0.929 0.929 0.622 1.128 0.23z"></path>
-    </svg>
-    <span class="bottom">Search</span>
-  </a>
-  <a href="https://libraries.mit.edu/barton-account" class="link-account hidden-non-mobile">
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="15.4" height="16" viewBox="0 0 15.4 16" enable-background="new 0 0 15.445 16" xml:space="preserve" class="icon-account"><path d="M13.4 15.7C12.2 15.9 10.4 16 7.7 16c-5.4 0-7.3-0.6-7.3-0.6 -0.3-0.1-0.4-0.4-0.4-0.7 0.3-1.6 1.2-2.5 2.5-3.3 0.3-0.2 0.8-0.4 1.2-0.6 0.8-0.3 1.8-0.7 2-1.3C5.8 9.2 5.7 8.6 5.2 7.9c-1.4-2.3-1.7-4.3-0.8-5.9C5.1 0.7 6.4 0 7.7 0c1.4 0 2.6 0.7 3.3 2 0.9 1.6 0.7 3.6-0.8 5.9C9.8 8.6 9.6 9.2 9.8 9.6c0.2 0.6 1.2 1 2 1.3 0.4 0.2 0.9 0.4 1.2 0.6 1.2 0.8 2.1 1.6 2.5 3.3 0.1 0.3-0.1 0.6-0.4 0.7C15 15.4 14.5 15.6 13.4 15.7"/></svg>
-    <span class="bottom">Account</span>
-  </a>
-
 </header>
